[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riscv-emulator"
version = "0.1.0"
description = "A Python-based RISC-V assembler, emulator, disassembler, and debugger"
authors = [
    { name = "Satvik Malneedi", email = "samalneedi@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/sadaveek/riscv-emulator"

[project.scripts]
riscv = "riscv_emulator.main:main"

[tool.setuptools]
packages = ["riscv_emulator"]